bk_ida/gccida/g3/print_stack
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_stack/src/reg-stack.c:2832:19: error: use of undeclared identifier 'stru_74575F'
fwrite( ( char *)&stru_74575F._chain + 2, 1uLL, 2uLL, file); 
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_stack/src/obj/reg-stack.o] Error 1
